tests/ui/feature-gates/feature-gate-deref_patterns.stderr
error[E0308]: mismatched types
  --> $DIR/feature-gate-deref_patterns.rs:4:9
   |
LL |     match x {
   |           - this expression has type `Box<char>`
LL |         'c' => (),
   |         ^^^ expected `Box<char>`, found `char`
   |
   = note: expected struct `Box<char>`
                found type `char`
help: consider dereferencing the boxed value
   |
LL |     match *x {
   |           +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
