tests/ui/feature-gates/feature-gate-deref_patterns.rs
fn main() {
    let x = Box::new('c');
    match x {
        'c' => (), //~ ERROR mismatched types
        _ => (),
    }
}
